--- a/css/index/style.css
+++ b/css/index/style.css
@@ -346,7 +346,7 @@ body {
 
 /* main */
 #main {
-  margin-top: 90px;
+  margin-top: 130px;
   background-color: var(--bg-white-1-color);
 }
 .main_container {
